--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -13,11 +13,10 @@ applications:
       env:
         BUNDLE_WITHOUT: 'development:test'
         PIDFILE: "tmp/server.pid"
-        RACK_ENV: 'production'
-        RAILS_ENV: 'production'
         RAILS_LOG_TO_STDOUT: '1'
         RAILS_TMP: '/tmp'
         TARGET_RUBY_VERSION: '~>3.4' # this will allow to not fail on PATCH update of the image
+        # SECRET_KEY_BASE variable is generated automatically based on the PLATFORM_PROJECT_ENTROPY variable but you can change it.
 
     relationships:
       db: "pg:postgresql"
